# kubera

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yml  railway.json  requirements.txt
.github/workflows/: ci-cd.yml
.trae/documents/: 在 _analyze_portfolio 中为每只股票增加期权策略推荐.md  在 analyze_portfolio 中增加期权策略建议并给出 20万现金实操方案.md
config/: portfolio.json
examples/: test_single_stock.py
portfolio_agent_orchestration/: config.py
portfolio_agent_orchestration/agents/: __init__.py  agent_evaluator.py  base_agent.py  company_info.py  deep_researcher.py  fact_checker.py  historical_data.py  news_fetcher.py  options_strategy.py  portfolio_loader.py  risk_manager.py  sentiment_reddit.py  sentiment_twitter.py
portfolio_agent_orchestration/workflows/: __init__.py  main_workflow.py
refs/stock_portfolio_intelligence_system_v1_crewai-project/: README.md  pyproject.toml
refs/stock_portfolio_intelligence_system_v1_crewai-project/src/stock_portfolio_intelligence_system/: crew.py  main.py
refs/stock_portfolio_intelligence_system_v1_crewai-project/src/stock_portfolio_intelligence_system/config/: agents.yaml  tasks.yaml
refs/stock_portfolio_intelligence_system_v1_crewai-project/src/stock_portfolio_intelligence_system/tools/: telegram_bot_messenger.py
src/agents/: base_agent.py  company_info.py  historical_data.py  news_fetcher.py  options_strategy.py  portfolio_loader.py  researcher.py  risk_manager.py  sentiment_reddit.py  sentiment_twitter.py
src/bot/: __init__.py  (+1 more)
terraform/: main.tf  terraform.tfvars.example  variables.tf
(+23 files in other folders)
