[project]
name = "stock_portfolio_intelligence_system"
version = "0.1.0"
description = "stock_portfolio_intelligence_system using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.3.0"
]

[project.scripts]
stock_portfolio_intelligence_system = "stock_portfolio_intelligence_system.main:run"
run_crew = "stock_portfolio_intelligence_system.main:run"
train = "stock_portfolio_intelligence_system.main:train"
replay = "stock_portfolio_intelligence_system.main:replay"
test = "stock_portfolio_intelligence_system.main:test"
run_with_trigger = "stock_portfolio_intelligence_system.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
